--- a/homeshopping.html
+++ b/homeshopping.html
@@ -142,42 +142,57 @@
 
 				<div class="space"></div>
 
-				<h3>Project scope</h3>
-				<p>I worked closely with my PM and our Brokerage team lead to determine the high-level requirements for this project. HAs would be moving from using primarily Salesforce to Deal Hub, where we would need to build a new stage within Deal Hub where HAs could:</p>
+				<h3>Research + defining scope</h3>
+				<p>My PM and I kicked off this project by building an understanding of the current state of Deal Hub with current users to understand existing functionality and usability gaps.</p>
+				<p>To ensure we were building the right product and gain buy-in with HAs, we decided to run a 2-month beta program with 3 high-performing HAs and 1 of their managers to ensure a smooth transition. Throughout the program, we:</p>
 					<ul>
-						<li>Manage a pipeline of all home shoppers</li>
-						<li>View an activity feed of customer <> Orchard communications</li>
-						<li>Update information about customer engagement and motivations (e.g. reason for moving)</li>
-						<li>Access customer’s saved homes & searches (via the Orchard customer dashboard)</li>
-						<li>View home tour feedback and upcoming tours</li>
-						<li>Easily create and check off tasks</li>
+						<li>Ran card-sorting exercises with HAs to understand what information HAs need and want during the home shopping phase.</li>
+						<li>Concept-tested an initial design based on the high-level functionality requirements.</li>
+						<li>Beta group participants fully adopted DH and provided feedback on a weekly basis while eng finished out the next set of MVP+ features.</li>
 					</ul>
 				</p>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<img class="pic-left" src="pics/homeshopping/card-sorting.png">
+					</div>
+				</div>
+
+				<h3>Project scope + requirements</h3>
+				<p>I worked closely with my PM and our Brokerage team lead to determine the high-level requirements for this project while factoring in the user needs and pain points we'd uncovered. At a high level, HAs would be moving from using primarily Salesforce to Deal Hub, where we would need to support:</p>
+					<ul>
+						<li>Managing a pipeline of all home shoppers</li>
+						<li>Viewing an activity feed of customer <> Orchard communications</li>
+						<li>Updating information about customer engagement and motivations (e.g. reason for moving)</li>
+						<li>Accessing customer’s saved homes & searches (via the Orchard customer dashboard)</li>
+						<li>Viewing home tour feedback and upcoming tours</li>
+						<li>Easily creating and checking off tasks</li>
+					</ul>
+				<p>Most of this work was building net-new functionality, but my PM and I also took the time to make strategic usability improvements to existing features. See an overview below:</p>
 
 				<div class="space"></div>
+				<div class="space"></div>
 
-				<h3>Beta group</h3>
-				<p>Since this project marked a significant shift for the HA team of ~20, we decided to run a 2-month beta program with 3 high-performing HAs and 1 of their managers to ensure a smooth transition. Throughout the program, I:</p>
-					<ul>
-						<li>Researched the current state of Deal Hub with current users</li>
-						<li>Ran card-sorting exercises to understand what information HAs need and want during the home shopping phase</li>
-						<li>Concept-tested an initial design based on the high-level functionality requirements</li>
-						<li>[pause while eng worked on an MVP]</li>
-						<li>Beta group participants fully adopted DH and provided feedback on a weekly basis while eng finished out the next set of MVP+ features</li>
-					</ul>
-				</p>
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: #6554CC">
+						<img class="pic-left" src="pics/homeshopping/pipeline.png">
+						<img class="pic-left" src="pics/homeshopping/activity.png">
+						<img class="pic-left" src="pics/homeshopping/dash.png">
+						<img class="pic-left" src="pics/homeshopping/tasking.png">
+					</div>
+				</div>
 
 				<div class="space"></div>
 
 
 				<h3>Outcome</h3>
 				<p>
-					The new dashboard was rolled out smoothly & on-time. We ran a survey to understand HA satisfaction a few weeks after release, and found that the transition went well overall. Most HAs feel that DH has made doing their jobs easier.
+					The new dashboard + related work was rolled out smoothly & on-time. We ran a survey to understand HA satisfaction a few weeks after release, and found that most HAs feel that Deal Hub has made doing their jobs easier.
 					<ul>
-						<li>Overall tooling satisfaction took a small dip  (-5%) - likely due to the transition in general and having to learn a new tool</li>
-						<li>Satisfaction with pipeline management, tasking, and communication remained flat </li>
-						<li>Satisfaction with managing new home closings increased (+26%)</li>
-						<li>When asked if DH has made doing their jobs easier, 57% said yes, 29% were neutral, and 14% disagreed.</li>
+						<li>Overall tooling satisfaction took a small dip  (-5%) - likely due to the transition in general and having to learn a new tool.</li>
+						<li>Satisfaction with pipeline management, tasking, and communication remained flat. </li>
+						<li>Satisfaction with managing new home closings increased (+26%).</li>
+						<li>When asked if Deal Hub has made doing their jobs easier, 57% said yes, 29% were neutral, and 14% disagreed.</li>
 					</ul>
 					 
 				</p>
@@ -186,22 +201,12 @@
 
             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
         		<h4>Want the full case study?</h4>
-        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details and designs. View selected screenshots below:</p>
+        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details and designs.</p>
         	</div> 
 
 			</div>
 
 
-		</div>
-	</div>
-
-
-	<div class="full-width-mid-page">
-		<div class="panel dark" style="text-align: center; background-color: #6554CC">
-			<div class="mid-panel-text-top">
-				<h2>Selected screens</h2>		
-			</div>
-			<img class="pic-left" src="pics/homeshopping/shopping screens.png">
 		</div>
 	</div>
 	  	
