--- a/concierge.html
+++ b/concierge.html
@@ -36,7 +36,7 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-	<div id="modal_background">
+<!-- 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 		<label>Enter a password to view project:</label>
 			<div>
@@ -46,7 +46,7 @@
 
 		</div>
 	</div>
-
+ -->
 
 	<div class="full-width" style="background-color: #31334C; color: white">
 		<div class="title-wrapper animate-reveal animate-first">
@@ -107,7 +107,7 @@
 							<li>It drives conversion and sets Orchard apart from its competitors, especially in a buyer's market when selling is tougher.</li>
 							<li>Orchard introduced a 35% Concierge program fee and asset management fees in late 2022, which contribute to overall profitability.</li>
 					</ul>
-					<p>It's also a popular program; Concierge attach rates doubled from 20% in 2021 to 40% in 2022.</p>
+					<!-- <p>It's also a popular program; Concierge attach rates doubled from 20% in 2021 to 40% in 2022.</p> -->
 				</p>
 
 				<div class="space"></div>
@@ -142,16 +142,31 @@
 
 				<div class="space"></div>
 
+				<h3>How were RLs managing Concierge before?</h3>
+				<p>Most were using some combination of a free-text box in Salesforce, bespoke personal spreadsheets, and other external tools like Buildertrend. Because Concierge details weren't being tracked programatically in Atlas, the Concierge Coordinator also had to generate invoices manually using a GSheet template.</p>
+				</p>
+
+				<div class="space"></div>
+
 				<h3>Project scope</h3>
 				<p>To define project scope, A PM and I conducted user research initially and consulted with stakeholders throughout to ensure we were solving the right problems. We streamlined the existing contract-sending tool and added net-new functionality to:</p>
 					<ul>
+						<li>Generate contracts</li>
 						<li>Send contract amendments when the project changes</li>
 						<li>View contract statuses and a summary of key details</li>
 						<li>Generate invoices based on the latest contract</li>
 					</ul>
+				<p>See the primary contract generation user flow below:</p>
 				</p>
 
 				<div class="space"></div>
+				<div class="space"></div>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: #31334C;">
+						<img class="pic-left" src="pics/concierge-user-flow.png">
+					</div>
+				</div>
 
 				<h3>Outcome</h3>
 				<p>
@@ -178,7 +193,7 @@
 	</div>
 
 
-	<div class="full-width-mid-page">
+<!-- 	<div class="full-width-mid-page">
 		<div class="panel dark" style="text-align: center; background-color: #31334C">
 			<div class="mid-panel-text-top">
 				<h2>Primary flow</h2>	
@@ -186,7 +201,7 @@
 			</div>
 			<img class="pic-left" src="pics/concierge-review.png">
 		</div>
-	</div>
+	</div> -->
 	  	
   	<div id="footer"></div>
   	</meta>
