--- a/concierge.html
+++ b/concierge.html
@@ -36,7 +36,7 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 		<label>Enter a password to view project:</label>
 			<div>
@@ -46,7 +46,7 @@
 
 		</div>
 	</div>
- -->
+
 
 	<div class="full-width" style="background-color: #31334C; color: white">
 		<div class="title-wrapper animate-reveal animate-first">
