--- a/concierge.html
+++ b/concierge.html
@@ -143,7 +143,7 @@
 				<div class="space"></div>
 
 				<h3>How were RLs managing Concierge before?</h3>
-				<p>Most were using some combination of a free-text box in Salesforce, bespoke personal spreadsheets, and other external tools like Buildertrend. Because Concierge details weren't being tracked programatically in Atlas, the Concierge Coordinator also had to generate invoices manually using a GSheet template.</p>
+				<p>Most were using some combination of a free-text box in Salesforce, bespoke personal spreadsheets, and other external tools like Buildertrend. Because Concierge details weren't being tracked programatically, the Concierge Coordinator also had to generate invoices manually using a GSheet template.</p>
 				</p>
 
 				<div class="space"></div>
