--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -103,6 +103,7 @@
 
 				<div class="space"></div>
 
+
 				<h3>Approach</h3>
 				<p>
 					<ul>
@@ -110,11 +111,41 @@
 						<li>My PM partner and I then worked with leaders across PDE to summarize the UX vision for the platform and presented that vision to the rest of the team. This work built off vision work my manager had done several months ago on the long-term (2-3 year) vision.</li>
 						<li>Once aligned on vision, my PM partner and I conducted 30+ user interviews (shallow & wide), covering all platform user groups, so that we had a clear picture of job responsibilities, current tool usage, and primary pain points.</li>
 						<li>We synthesized those findings and used our insights to feed into a formal product roadmap for 2023.</li>
-						<li>Our engineering counterparts also provided a technical vision to go along with the product roadmap.</li>
+						<li>We presented our UX vision + roadmap to the entire platform Product-Design-Eng team and high-level leadership to get buy-in.</li>
 					</ul>
 				</p>
 
 				<div class="space"></div>
+
+				<h3>Learnings from the Listening Tour</h3>
+				<p>
+					<ul>
+						<li>There aren't clear or distinct enough purposes for each of the 3 primary platform tools (Atlas, Salesforce, and Deal Hub) due to the overlap in functionality + information. This causes confusion and erodes user trust.</li>
+						<li>There is no centralized communication platform; each tool has its own built-in comms tools. This makes it harder for teams to communicate effectively and easy for users to miss key information.</li>
+						<li>Atlas & Salesforce have proven difficult to maintain - there's a ton of complicate legacy functionality that is no longer relevant.</li>
+					</ul>
+				</p>
+
+				<div class="space"></div>
+
+			<div class="full-width-mid-page">
+				<div class="panel dark" style="text-align: center; background-color: #A061D5">
+					<img class="pic-left" src="pics/orchard-vision/probs.png">
+				</div>
+			</div>
+
+			<div class="space"></div>
+
+			<h3>Outcome</h3>
+			<p>
+				<ul>
+					<li>To address the communication challenge, we rolled out Slack as our primary deal team communication platform and deprecated other internal comms tools. This has led to much more effective cross-team communication.</li>
+					<li>Over the course of 2023, we have deprecated irrelevant legacy content and functionality in Atlas and Salesforce and gradually moved it into Deal Hub. We gave most internal roles access to Deal Hub and transitioned them to it as their primary tool.</li>
+					<li>In 2024, we plan to take on a larger IA overhaul project to further centralize Deal Hub as the primary tool + source of truth for most roles.</li>
+				</ul>
+			</p>
+
+			<div class="space"></div>
 
             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
         		<h4>Want the full case study?</h4>
