--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -122,7 +122,7 @@
 					<ul>
 						<li>There aren't clear or distinct enough purposes for each of the 3 primary platform tools (Atlas, Salesforce, and Deal Hub) due to the overlap in functionality + information. This causes confusion and erodes user trust.</li>
 						<li>There is no centralized communication platform; each tool has its own built-in comms tools. This makes it harder for teams to communicate effectively and easy for users to miss key information.</li>
-						<li>Atlas & Salesforce have proven difficult to maintain - there's a ton of complicate legacy functionality that is no longer relevant.</li>
+						<li>Atlas & Salesforce have proven difficult to maintain - there's a ton of complicated legacy functionality that is no longer relevant.</li>
 					</ul>
 				</p>
 
@@ -141,7 +141,7 @@
 				<ul>
 					<li>To address the communication challenge, we rolled out Slack as our primary deal team communication platform and deprecated other internal comms tools. This has led to much more effective cross-team communication.</li>
 					<li>Over the course of 2023, we have deprecated irrelevant legacy content and functionality in Atlas and Salesforce and gradually moved it into Deal Hub. We gave most internal roles access to Deal Hub and transitioned them to it as their primary tool.</li>
-					<li>In 2024, we plan to take on a larger IA overhaul project to further centralize Deal Hub as the primary tool + source of truth for most roles.</li>
+					<li>In 2024, we plan to take on a larger IA overhaul project to further centralize Deal Hub as the primary tool + source of truth for all roles.</li>
 				</ul>
 			</p>
 
