--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -108,9 +108,8 @@
 				<p>
 					<ul>
 						<li>Before this initiative kicked off, I led a cross-functional group in defining unique design principles for the platform - these were meant to aid in decision-making and summarize what sets apart Orchard's internal tools.</li>
-						<li>My PM partner and I then worked with leaders across PDE to summarize the UX vision for the platform and presented that vision to the rest of the team. This work built off vision work my manager had done several months ago on the long-term (2-3 year) vision.</li>
-						<li>Once aligned on vision, my PM partner and I conducted 30+ user interviews (shallow & wide), covering all platform user groups, so that we had a clear picture of job responsibilities, current tool usage, and primary pain points.</li>
-						<li>We synthesized those findings and used our insights to feed into a formal product roadmap for 2023.</li>
+						<li>My PM partner and I launched a "Listening Tour," conducting 30+ user interviews, covering all platform user groups, so that we had a clear picture of job responsibilities, current tool usage, and primary pain points.</li>
+						<li>We synthesized those findings and used our insights to feed into a formal UX vision + product roadmap for 2023.</li>
 						<li>We presented our UX vision + roadmap to the entire platform Product-Design-Eng team and high-level leadership to get buy-in.</li>
 					</ul>
 				</p>
