--- a/homeshopping.html
+++ b/homeshopping.html
@@ -36,7 +36,7 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 		<label>Enter a password to view project:</label>
 			<div>
@@ -45,7 +45,7 @@
 			</div>
 
 		</div>
-	</div> -->
+	</div>
 
 
 	<div class="full-width" style="background-color: #6554CC; color: white">
