--- a/concierge.html
+++ b/concierge.html
@@ -54,12 +54,12 @@
 				<div>
 					<h4>Orchard • 2022</h4>
 					<h1 style="color: white">Concierge</h1>
-					<p class="p-XL">Introduced full product support for Orchard's "Concierge" renovation program.</p>
+					<p class="p-XL">Introduced new home renovation tooling - including project planning, generating smart contracts, and sending invoices.</p>
 				</div>
 			</div>
 		</div> 
 
-		<img src="pics/concierge.png" class="big-pic">
+		<img src="pics/concierge2.png" class="big-pic">
 	</div>
 
 
