--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -51,7 +51,7 @@
 				<div>
 					<h4 style="margin-bottom: 10px">Orchard • 2022-23</h4>
 					<h1 style="color: black">Product vision</h1>
-					<p class="p-XL">Collaborated with product to define a vision and roadmap for a more tightly integrated platform product.</p>
+					<p class="p-XL">Collaborated with product to define a vision and roadmap to integrate our 3 platform tools into one integrated product experience.</p>
 				</div>
 			</div>
 		</div> 
@@ -67,7 +67,7 @@
 				<h2>Project Overview</h2>
 
 				<p class="p-XL">
-					Partnered with a PM to define a 6-month UX vision + 2023 product roadmap for better integrating Orchard's primary platform products following the acqusition of a smaller company.
+					Partnered with a PM to define a UX vision + 2023 product roadmap for better integrating Orchard's 3 primary platform products (Salesforce, Atlas, Deal Hub) following the acqusition of a smaller company.
 				</p>
 				
 				<div class="space"></div>
