updated home page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ $('#footer').load('http://emilyporat.com/footer.html');
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
               <h1 style="text-align: center; margin-bottom: 20px; color: var(--purple)">Emily Porat</h1>
-              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · Designing efficient real estate tools for internal teams.</p>
+              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · Focusing on internal & enterprise tools for complex systems</p>
+
               
             </div>
           </div>
@@ -85,7 +86,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022 • Vision & Strategy</h4>
-      <h3>Product vision</h3>
+      <h3>Orchard platform product vision</h3>
       <p>Collaborated with product to define a vision and 2023 roadmap to integrate our 3 platform tools into one integrated product experience.</p>
       <p><a href="orchard-roadmap.html">Learn more →</a></p>
     </div>
@@ -93,15 +94,15 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div>
 
 
-<!--   <div class="section-large" style="background-color: var(--white)">  
+  <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021</h4>
-      <h3>User research & product roadmapping</h3>
+      <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021 • Research & Strategy</h4>
+      <h3>Nonprofit user research & roadmapping</h3>
       <p>Evaluated the overarching user experience of a nonprofit client's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
       <p><a href="health-nonprofit.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
-  </div> -->
+  </div>
 
 
     <div class="section-large" style="background-color: var(--white)">
