--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
               <h1 style="text-align: center; margin-bottom: 20px; color: var(--purple)">Emily Porat</h1>
-              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · focused on designing efficient enterprise tools for complex systems</p>
+              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · designing enterprise tools for complex systems</p>
               
             </div>
           </div>
