--- a/about.html
+++ b/about.html
@@ -62,15 +62,11 @@
 
           <div  class="space"></div>
 
-          <p>In practice, this applies to a couple different areas. I love conducting research and translating raw data into actionable insights and solutions. I also enjoy the other end of the spectrum - working with design systems and organizing component libraries.</p>
+          <p>For more info on my professional background, check out my <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> download my <a href="resume.pdf" target="_blank">resume</a>.</p>
 
           <div  class="space"></div>
 
-          <p>For more info on my professional background, download my <a href="resume.pdf" target="_blank">resume</a>.</p>
-
-          <div  class="space"></div>
-
-          <p>In my free time, you can catch me lifting heavy things at the gym, playing with my cats, or thrift shopping in Brooklyn.</p>
+          <p>In my free time, you can catch me reading, lifting heavy things at the gym, playing with my cats, or thrift shopping in Brooklyn.</p>
 
         </div>
 
