--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 	<a href="index.html"><img src="pics/logo-white.svg" class="nav-logo"></a>
 	<div id="nav-items">   
 		<a class="nav-item" id="home-nav-item" href="index.html"><h4>Home</h4></a>
-		<a class="nav-item" id="home-nav-item" href="about.html"><h4>About</h4></a>
+<!-- 		<a class="nav-item" id="home-nav-item" href="about.html"><h4>About</h4></a> -->
 		<a class="nav-item" id="home-nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()"><h4>Résumé</h4></a>
 <!-- 		<a class="nav-item" id="home-nav-item" href="mailto:emporat@gmail.com" value="Send me an email" target="_blank">Contact</a> -->
 	</div>
