--- a/concierge.html
+++ b/concierge.html
@@ -183,7 +183,7 @@
 
             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
         		<h4>Want the full case study?</h4>
-        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details and designs. View selected screenshots below:</p>
+        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details and designs. </p>
         	</div> 
 
 			</div>
