--- a/homeshopping.html
+++ b/homeshopping.html
@@ -88,7 +88,7 @@
 					
 					<div class="context-description">
 						<h4>Team</h4>
-						<p>Me, PM, Tech lead, 3 other engineers</p>
+						<p>Me, PM, Tech lead + 3 engineers</p>
 					</div> 
 				</div>
 
