--- a/concierge.html
+++ b/concierge.html
@@ -36,7 +36,7 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 		<label>Enter a password to view project:</label>
 			<div>
@@ -45,7 +45,7 @@
 			</div>
 
 		</div>
-	</div> -->
+	</div>
 
 
 	<div class="full-width" style="background-color: #31334C; color: white">
@@ -88,7 +88,7 @@
 					
 					<div class="context-description">
 						<h4>Team</h4>
-						<p>Me, PM, Tech lead, 2 other engineers</p>
+						<p>Me, PM, Tech lead + 2 engineers</p>
 					</div> 
 				</div>
 
