--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022 • Vision & Strategy</h4>
       <h3>Orchard platform product vision</h3>
-      <p>Collaborated with product to define a vision and 2023 roadmap to integrate our 3 platform tools into one integrated product experience.</p>
+      <p>Collaborated with product to define a vision and 2023 roadmap to integrate our 3 platform tools into one unified product experience.</p>
       <p><a href="orchard-roadmap.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/roadmap.png">
