--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -51,7 +51,7 @@
 				<div>
 					<h4 style="margin-bottom: 10px">Orchard • 2022-23</h4>
 					<h1 style="color: black">Product vision</h1>
-					<p class="p-XL">Collaborated with product to define a vision and roadmap to integrate our 3 platform tools into one integrated product experience.</p>
+					<p class="p-XL">Collaborated with product to define a vision and roadmap to integrate our 3 platform tools into one unified product experience.</p>
 				</div>
 			</div>
 		</div> 
